==> TexasInstruments/mspm0-sdk/examples/nortos/LP_MSPM0G3507/bsl/bsl_host_mcu_can/bsl.c <==
#include <can_config.h>
#include "bsl.h"
#include "stdio.h"
#include "string.h"
#include "can.h"

void Host_BSL_entry_sequence()
{
    /* BSL reset sequence
     *
     *                   H                        +-------------+
     * PB0 NRST          L -----------------------+
     *
     *                   H        +------------------------------+
     * PB16 Invoke GPIO  L--------+                              +----
     *
     */
    /* NRST low, TEST low */

    DL_GPIO_clearPins(GPIO_BSL_PORT, GPIO_BSL_NRST_PIN);
    DL_GPIO_clearPins(GPIO_BSL_PORT, GPIO_BSL_Invoke_PIN);
    delay_cycles(BSL_INVOKE_DELAY);

    /* Invoke GPIO high*/
    DL_GPIO_setPins(GPIO_BSL_PORT, GPIO_BSL_Invoke_PIN);
    delay_cycles(BSL_INVOKE_DELAY);
    delay_cycles(33000000);
    /* NRST high*/
    DL_GPIO_setPins(GPIO_BSL_PORT, GPIO_BSL_NRST_PIN);
    delay_cycles(BSL_INVOKE_DELAY);
    delay_cycles(BSL_INVOKE_DELAY);
    delay_cycles(BSL_INVOKE_DELAY);
    DL_GPIO_clearPins(GPIO_BSL_PORT, GPIO_BSL_Invoke_PIN);
}

void TurnOnErrorLED(void)
{
    DL_GPIO_setPins(GPIO_LED_Error_PORT, GPIO_LED_Error_PIN);
}

uint8_t Host_BSL_Connection(void)
{
    active_BSL_command = CMD_CONNECTION;
    uint8_t bsl_response = BSL_OPERATION_SUCCESFUL;
    uint32_t ui32CRC;

    BSL_TX_buffer[0] = (uint8_t) BSL_PACKET_HEADER;
    BSL_TX_buffer[1] = LSB(BSL_CMD_SIZE);
    BSL_TX_buffer[2] = 0x00;
    BSL_TX_buffer[3] = CMD_CONNECTION;

    // Calculate CRC on the PAYLOAD (CMD + Data)
    ui32CRC = softwareCRC((uint8_t *) &BSL_TX_buffer[3], BSL_CMD_SIZE);
    // Insert the CRC into the packet
    *(uint32_t *) &BSL_TX_buffer[BSL_HED_LEN_CMD_SIZE] = ui32CRC;

    MCAN_send_BSL_packet(BSL_TX_buffer,BSL_HED_LEN_CMD_SIZE + BSL_CRC_SIZE);

    bsl_response = receive_bsl_response();
    if (bsl_response != BSL_OPERATION_SUCCESFUL)
    {
        TurnOnErrorLED();
    }
    return (bsl_response);
}

uint8_t Host_BSL_GetID(void)
{
    active_BSL_command = CMD_GET_DEVICE_INFO;
    uint8_t bsl_response = BSL_OPERATION_SUCCESFUL;
    uint32_t ui32CRC;

    BSL_TX_buffer[0] = (uint8_t) BSL_PACKET_HEADER;
    BSL_TX_buffer[1] = LSB(BSL_CMD_SIZE);
    BSL_TX_buffer[2] = 0x00;
    BSL_TX_buffer[3] = CMD_GET_DEVICE_INFO;

    // Calculate CRC on the PAYLOAD (CMD + Data)
    ui32CRC = softwareCRC((uint8_t *) &BSL_TX_buffer[3], BSL_CMD_SIZE);
    // Insert the CRC into the packet
    *(uint32_t *) &BSL_TX_buffer[BSL_HED_LEN_CMD_SIZE] = ui32CRC;

    // Write the packet to the target
    MCAN_send_BSL_packet(BSL_TX_buffer, BSL_HED_LEN_CMD_SIZE + BSL_CRC_SIZE);
    bsl_response = receive_bsl_response();
    if (bsl_response != BSL_OPERATION_SUCCESFUL) {
        TurnOnErrorLED();
    }
    return (bsl_response);
}

uint8_t Host_BSL_loadPassword(uint8_t *pPassword)
{
    active_BSL_command = CMD_UNLOCK_BOOTLOADER;
    uint8_t bsl_response = BSL_OPERATION_SUCCESFUL;
    uint32_t ui32CRC;

    BSL_TX_buffer[0] = (uint8_t) BSL_PACKET_HEADER;
    BSL_TX_buffer[1] = LSB(BSL_PASSWORD_SIZE + BSL_CMD_SIZE);
    BSL_TX_buffer[2] = 0x00;
    BSL_TX_buffer[3] = CMD_UNLOCK_BOOTLOADER;

    memcpy((uint8_t *) &BSL_TX_buffer[4], pPassword, BSL_PASSWORD_SIZE);

    // Calculate CRC on the PAYLOAD (CMD + Data)
    ui32CRC = softwareCRC((uint8_t *) &BSL_TX_buffer[3], BSL_PASSWORD_SIZE + BSL_CMD_SIZE);

    // Insert the CRC into the packet
    *(uint32_t *) &BSL_TX_buffer[BSL_HED_LEN_CMD_SIZE + BSL_PASSWORD_SIZE] = ui32CRC;

    // Write the packet to the target
    MCAN_send_BSL_packet(BSL_TX_buffer,
                         BSL_HED_LEN_CMD_SIZE + BSL_PASSWORD_SIZE + BSL_CRC_SIZE);
    bsl_response = receive_bsl_response();
    if (bsl_response != BSL_OPERATION_SUCCESFUL) {
        TurnOnErrorLED();
    }
    return (bsl_response);
}

uint8_t Host_BSL_MassErase(void)
{
    active_BSL_command = CMD_MASS_ERASE;
    uint8_t bsl_response = BSL_OPERATION_SUCCESFUL;
    uint32_t ui32CRC;

    BSL_TX_buffer[0] = (uint8_t) BSL_PACKET_HEADER;
    BSL_TX_buffer[1] = LSB(BSL_CMD_SIZE);
    BSL_TX_buffer[2] = 0x00;
    BSL_TX_buffer[3] = CMD_MASS_ERASE;

    // Calculate CRC on the PAYLOAD (CMD + Data)
    ui32CRC = softwareCRC((uint8_t *) &BSL_TX_buffer[3], BSL_CMD_SIZE);
    // Insert the CRC into the packet
    *(uint32_t *) &BSL_TX_buffer[BSL_HED_LEN_CMD_SIZE] = ui32CRC;

    // Write the packet to the target
    MCAN_send_BSL_packet( BSL_TX_buffer,
                         BSL_HED_LEN_CMD_SIZE + BSL_CRC_SIZE);

    bsl_response = receive_bsl_response();
    if (bsl_response != BSL_OPERATION_SUCCESFUL) {
        TurnOnErrorLED();
    }
    return (bsl_response);
}

uint8_t Host_BSL_writeMemory(
    uint32_t addr, const uint8_t *data, uint32_t len)
{
    active_BSL_command = CMD_PROGRAM_DATA;
    uint8_t bsl_response = BSL_OPERATION_SUCCESFUL;
    uint16_t ui16DataLength;
    uint16_t ui16PayloadSize;
    uint16_t ui16PacketSize;
    uint32_t ui32CRC;
    uint16_t ui16BytesToWrite = len;
    uint32_t TargetAddress    = addr;

    while (ui16BytesToWrite > 0) {
        delay_cycles(2000000);  //allow target deal with the packet send before

        if (ui16BytesToWrite >= MAX_PAYLOAD_DATA_SIZE)
            ui16DataLength = MAX_PAYLOAD_DATA_SIZE;
        else
            ui16DataLength = ui16BytesToWrite;

        ui16BytesToWrite = ui16BytesToWrite - ui16DataLength;

        // Add (1byte) command + (4 bytes)ADDRS = 5 bytes to the payload
        ui16PayloadSize = (BSL_CMD_SIZE + BSL_ADDRS_SIZE + ui16DataLength);

        BSL_TX_buffer[0] = BSL_PACKET_HEADER;
        BSL_TX_buffer[1] =
            LSB(ui16PayloadSize);  // typically 4 + MAX_PAYLOAD SIZE
        BSL_TX_buffer[2] = MSB(ui16PayloadSize);
        BSL_TX_buffer[3] = (uint8_t) CMD_PROGRAM_DATA;
        *(uint32_t *) &BSL_TX_buffer[BSL_HED_LEN_CMD_SIZE] = TargetAddress;

        // Bump up the target address by 2x the number of bytes sent for the next packet
        TargetAddress += ui16DataLength;

        // Copy the data into the BSL_TX_buffer
        memcpy((uint8_t *) &BSL_TX_buffer[BSL_HED_LEN_CMD_SIZE + BSL_ADDRS_SIZE], data,
            ui16DataLength);

        data += ui16DataLength;

        // Calculate CRC on the PAYLOAD
        ui32CRC = softwareCRC((uint8_t *) &BSL_TX_buffer[3], ui16PayloadSize);

        // Calculate the packet length
        ui16PacketSize = BSL_HED_LEN_CMD_SIZE + BSL_ADDRS_SIZE + ui16DataLength;

        // Insert the CRC into the packet at the end
        *(uint32_t *) &BSL_TX_buffer[ui16PacketSize] = ui32CRC;

        // Write the packet to the target
        MCAN_send_BSL_packet( BSL_TX_buffer,
                             ui16PacketSize + BSL_CRC_SIZE);

        bsl_response = receive_bsl_response();
        if (bsl_response != BSL_OPERATION_SUCCESFUL) {
            TurnOnErrorLED();
        }

        if (bsl_response != BSL_OPERATION_SUCCESFUL) break;

    }  // end while

    return (bsl_response);
}

uint8_t Host_BSL_StartApp(void)
{
    active_BSL_command = CMD_START_APPLICATION;
    uint8_t bsl_response = BSL_OPERATION_SUCCESFUL;
    uint32_t ui32CRC;

    BSL_TX_buffer[0] = (uint8_t) BSL_PACKET_HEADER;
    BSL_TX_buffer[1] = LSB(BSL_CMD_SIZE);
    BSL_TX_buffer[2] = 0x00;
    BSL_TX_buffer[3] = CMD_START_APPLICATION;

    // Calculate CRC on the PAYLOAD (CMD + Data)
    ui32CRC = softwareCRC((uint8_t *) &BSL_TX_buffer[3], BSL_CMD_SIZE);
    // Insert the CRC into the packet
    *(uint32_t *) &BSL_TX_buffer[BSL_HED_LEN_CMD_SIZE] = ui32CRC;

    MCAN_send_BSL_packet( BSL_TX_buffer,
                         BSL_HED_LEN_CMD_SIZE + BSL_CRC_SIZE);

    // Write the packet to the target
    bsl_response = receive_bsl_response();
    if (bsl_response != BSL_OPERATION_SUCCESFUL) {
        TurnOnErrorLED();
    }
    return (bsl_response);
}
